--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -104,6 +104,8 @@
         </activity>
         <activity android:name=".activity.ICBCMainActivity" >
         </activity>
+        <activity android:name=".activity.TransferActivity" >
+        </activity>
 
         <service
             android:name=".activity.TimeoutService"
