--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -19,7 +19,7 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@drawable/appicon"
+        android:icon="@drawable/icon_old"
         android:label="@string/app_name"
         android:theme="@android:style/Theme.Light.NoTitleBar" >
         <activity android:name="com.people.icbc.activity.SplashActivity" >
