--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -86,6 +86,18 @@
             <intent-filter>
                 <action android:name="com.people.icbc.activity.FacePayActivity" />
             </intent-filter>
+            <!--
+                 NFC-related intent filter. Allows application to handle messages from any
+                 NFC-A devices discovered. Other Android devices are required to support NFC-A.
+                 See: res/xml/nfc_tech_filter.xml
+            -->
+            <intent-filter>
+                <action android:name="android.nfc.action.TECH_DISCOVERED" />
+            </intent-filter>
+
+            <meta-data
+                android:name="android.nfc.action.TECH_DISCOVERED"
+                android:resource="@xml/nfc_tech_filter" />
         </activity>
         <activity
             android:name="com.people.icbc.activity.BothAccountsInfoActivity"
